--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,6 +16,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
+    "types": ["node"],          // <-- Add this line
     "paths": {
       "@/*": ["./src/*"]
     }
