--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:dev": "cd server && npm run dev",
-    "client:dev": "cd client && npm run dev",
+    "client:dev": "cd client && npm run dev -- --host",
     "server:build": "cd server && npm run build",
     "client:build": "cd client && npm run build",
     "build": "npm run server:build && npm run client:build",
