feat: Add accessibility settings, toast notifications, and progress tracking
- Add Toast component for custom notifications (replaces browser alerts)
- Add AccessibilityContext for global font size, high contrast, dyslexia font
- Add profile and accessibility API endpoints (PUT /auth/profile, /auth/accessibility)
- Add progress controller and routes
- Add FAQ, Students admin pages and controllers
- Fix dropdown styling for dark mode
- Update Settings page to use accessibility context
- Add CSS for global font size scaling across platform
- Update Courses and CourseDetail to use toast notifications

--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,23 @@ services:
   - type: web
     name: bsu-ai-tutor-api
     runtime: node
+    plan: free
     rootDir: server
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npx prisma generate && tsc
     startCommand: npm start
+    healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
         value: production
+      - key: DATABASE_URL
+        sync: false
+      - key: JWT_SECRET
+        sync: false
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: CORS_ORIGIN
+        value: https://bsu-ai-chatbot.netlify.app
+      - key: RATE_LIMIT_WINDOW_MS
+        value: "900000"
+      - key: RATE_LIMIT_MAX_REQUESTS
+        value: "100"
