--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "concurrently": "^8.2.2"
   },
   "dependencies": {
