--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,13 @@
     "@anthropic-ai/sdk": "^0.68.0",
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "openai": "^6.8.1",
@@ -28,11 +31,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.19.29",
+    "@types/node": "^20.19.25",
     "nodemon": "^3.0.2",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
