--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "openai": "^6.8.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "openai": "^6.8.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -36,11 +34,11 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.19.25",
+    "@types/node": "^20.19.30",
     "nodemon": "^3.0.2",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
