feat: Classroom optimization - modify steams and add join request

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,6 +12,10 @@ GOOGLE_REDIRECT_URI="http://localhost:3000/auth/google/callback"
 GEMINI_API_KEY="your-gemini-api-key"
 GCP_PROJECT_ID="your-gcp-project-id"
 
+# GCP Storage Configuration (for image uploads)
+GCS_BUCKET_NAME="bsu-ai-chatbot-images"
+GCS_KEY_FILE="./gcp-service-account-key.json"
+
 # API Keys for Web Scraping and Search (Optional)
 SERPAPI_KEY="your-serpapi-key"
 SCRAPINGBEE_API_KEY="your-scrapingbee-key"
