--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "gsap": "^3.14.2",
     "lucide-react": "^0.554.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1"
