--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,59 @@ services:
     container_name: tisa-labs-db
     restart: always
     environment:
-      POSTGRES_USER: tisa_admin
-      POSTGRES_PASSWORD: TisaLabs2025!Secure
-      POSTGRES_DB: tisa_labs
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: keycloak
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - tisa-network
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:23.0
+    container_name: tisa-keycloak
+    restart: always
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin123
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://db:5432/tisa_labs
+      KC_DB_USERNAME: tisa_admin
+      KC_DB_PASSWORD: TisaLabs2025!Secure
+      KC_HOSTNAME: localhost
+      KC_HTTP_ENABLED: "true"
+      KC_HOSTNAME_STRICT: "false"
+      KC_HOSTNAME_STRICT_HTTPS: "false"
+    ports:
+      - "8080:8080"
+    command:
+      - start-dev
+    depends_on:
+      - db
+    networks:
+      - tisa-network
+    volumes:
+      - keycloak_data:/opt/keycloak/data
+
+  # Note: Using cloud Redis (Upstash), but keeping local option for development
+  # redis:
+  #   image: redis:7-alpine
+  #   container_name: tisa-redis
+  #   restart: always
+  #   ports:
+  #     - "6379:6379"
+  #   volumes:
+  #     - redis_data:/data
+  #   networks:
+  #     - tisa-network
 
 volumes:
   postgres_data:
+  keycloak_data:
+  # redis_data:
+
+networks:
+  tisa-network:
+    driver: bridge
