--- a/server/package.json
+++ b/server/package.json
@@ -16,16 +16,20 @@
     "@anthropic-ai/sdk": "^0.68.0",
     "@prisma/client": "^5.22.0",
     "@types/multer": "^2.0.0",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
     "googleapis": "^170.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "keycloak-connect": "^23.0.4",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "openai": "^6.8.1",
