--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
     "@prisma/client": "^5.22.0",
+    "all": "^0.0.0",
+    "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -24,6 +26,7 @@
     "express-validator": "^7.0.1",
     "googleapis": "^170.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
