--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.554.0",
     "react-markdown": "^10.1.0",
