--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,10 @@
     "date-fns": "^3.0.6",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.303.0",
+    "quill": "^2.0.3",
+    "quill-better-table": "^1.2.10",
+    "quill-table-ui": "^1.0.7",
+    "quill-table-up": "^3.3.1",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
