--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.19",
     "all": "^0.0.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
     "date-fns-tz": "^3.2.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.303.0",
     "quill": "^2.0.3",
     "quill-better-table": "^1.2.10",
@@ -40,6 +42,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^24.10.1",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
