feat: add calendar, achievements, leaderboard and forums

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,21 +1,37 @@
 DATABASE_URL="postgresql://postgres:password@localhost:5432/tisa_labs?schema=public"
-JWT_SECRET="your-secret-key-change-this-in-production"
+JWT_SECRET="your-secret-key-change-this-in-production-min-32-chars"
 PORT=5000
 NODE_ENV=development
 
-# Google Calendar API Configuration (Optional - for automatic Google Meet creation)
+# CORS - set to your frontend URL in production
+CORS_ORIGIN="http://localhost:3000"
+
+# ─── AI Configuration (REQUIRED for AI Tutor to work) ───────────────────────
+# Gemini AI (Primary AI provider)
+GEMINI_API_KEY="your-gemini-api-key"
+GEMINI_MODEL="gemini-2.5-flash"
+
+# OpenAI (Fallback AI provider + quiz generation)
+OPENAI_API_KEY="your-openai-api-key"
+OPENAI_MODEL="gpt-4o-mini"
+
+# ─── Redis (Optional - for caching) ─────────────────────────────────────────
+REDIS_URL="redis://localhost:6379"
+
+# ─── Rate Limiting ───────────────────────────────────────────────────────────
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# ─── Google Calendar API (Optional - for Google Meet creation) ───────────────
 GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 GOOGLE_REDIRECT_URI="http://localhost:3000/auth/google/callback"
-
-# Gemini AI Configuration (for AI-powered meeting features)
-GEMINI_API_KEY="your-gemini-api-key"
 GCP_PROJECT_ID="your-gcp-project-id"
 
-# GCP Storage Configuration (for image uploads)
+# ─── GCP Storage (Optional - for image uploads) ──────────────────────────────
 GCS_BUCKET_NAME="bsu-ai-chatbot-images"
 GCS_KEY_FILE="./gcp-service-account-key.json"
 
-# API Keys for Web Scraping and Search (Optional)
+# ─── Web Scraping (Optional) ─────────────────────────────────────────────────
 SERPAPI_KEY="your-serpapi-key"
 SCRAPINGBEE_API_KEY="your-scrapingbee-key"
