--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "openai": "^6.8.1",
+    "slugify": "^1.6.6",
     "zod": "^4.3.6"
   },
   "devDependencies": {
