feat: consultation, room schedule, sso and admin panel

--- a/server/.env.example
+++ b/server/.env.example
@@ -22,10 +22,17 @@ REDIS_URL="redis://localhost:6379"
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# ─── Google Calendar API (Optional - for Google Meet creation) ───────────────
+# ─── Google OAuth 2.0 SSO (For Google Sign-In) ───────────────────────────────
+# To enable Google SSO:
+# 1. Go to https://console.cloud.google.com/apis/credentials
+# 2. Create OAuth 2.0 Client ID (Web application)
+# 3. Add authorized redirect URI: http://localhost:5173/auth/google/callback
+# 4. Copy Client ID and Client Secret below
 GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
-GOOGLE_REDIRECT_URI="http://localhost:3000/auth/google/callback"
+GOOGLE_REDIRECT_URI="http://localhost:5173/auth/google/callback"
+
+# ─── Google Calendar API (Optional - for Google Meet creation) ───────────────
 GCP_PROJECT_ID="your-gcp-project-id"
 
 # ─── GCP Storage (Optional - for image uploads) ──────────────────────────────
