--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react-datepicker": "^6.2.0",
+    "baseline-browser-mapping": "^2.10.0",
     "concurrently": "^8.2.2"
   },
   "dependencies": {
